# ape-demo-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ape-config.yaml  ape_console_extras.py  out.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.build/: __local__.json
contracts/: BuiltinErrorChecker.sol  Fund.sol  FundMe.sol  None.vy  PoofPoof.sol  RunTheJules.sol  Snake.vy  TestContract.vy  TestContractSol.sol  TestContractVy.vy  contract_0310.vy  empty.vy
contracts/subthing/: RunTheJules2.sol
scripts/: _utils.py  addr.py  ape.py  berr.py  cause_gas_errors.py  contract_logs.py  deploy.py  deploy_dependency.py  deploy_trace.py  dostufffast.py  error.py  event.py  ftmct.py  gas.py  get_contract_type.py  get_latest_block_num.py  get_owner.py  hw.py  init_contract_from_addr.py  install_all_plugins.sh  la.py  ledger.py  list_account_txns.py  make_static_txns.py  poll_logs.py  poll_new_blocks.py  publish.py  resolve.py  revert.py  revert_vyper.py  show_trace.py  sign.py  sim.py  static.py  structured.py  tb.py  tokens.py  transfer.py  trezor_acct.py  trezor_sign_typed.py  (+4 more)
tests/: conftest.py  test_fund.py  test_fund_me.py  test_network.py  test_snake.py  test_solidity.py  test_vyper.py
